# influxdb-file-importer

./: .pre-commit-config.yaml  README.rst  influxdb_file_importer.py  pyproject.toml  setup.py
src/: influxdb_file_importer.py
